# Vertexing

./: CMakeLists.txt  README  README.md
resources/: LinkDef.h
src/data_types/: DataObject.hpp  Segment.hpp  Track.hpp  Vertex.hpp
src/detector/: DetectorVolume.cpp  DetectorVolume.hpp  VolumeCell.hpp
src/downloaders/: FedraDownloader.cpp  FedraDownloader.hpp  IDownloader.hpp
src/main/: AppLogic.cpp  AppLogic.hpp  MainClass.cpp
src/utility/: CalculationAndAlgorithms.hpp  Histograming.hpp
src/vertex_processing/: VertexProcessor.cpp  VertexProcessor.hpp
src/vertex_search/: VertexSearcher.cpp  VertexSearcher.hpp
tests/: CMakeLists.txt  check_roman.C  vector_algorithms_test.cpp  vertex_coords_test.cpp
weights/: TMVAClassificationCategory_BDTG.class.C  TMVAClassificationCategory_BDTG.weights.xml
